Support for Sentinel-1C and Sentinel-1D
* New classes and enums for Sentinel-1 C/D
* Update generate-ref-data.ipynb
* Update reference data for testing

--- a/notebooks/generate-ref-data.ipynb
+++ b/notebooks/generate-ref-data.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "import s1isp\n",
     "from s1isp.udf import decode_ud\n",
-    "from s1isp.enums import ESignalType\n",
+    "from s1isp.enums import ESignalTypeS1AB as ESignalType\n",
     "from s1isp.decoder import decode_stream\n",
     "from s1isp.constants import (\n",
     "    PRIMARY_HEADER_SIZE as PHSIZE,\n",
@@ -117,7 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_ref_data(headerfile, datafile, row, dtype=np.complex64):\n",
+    "def read_ref_data(headerfile, datafile, row, dtype=np.dtype(\"complex64\")):\n",
+    "    dtype = np.dtype(dtype)\n",
     "    xmldoc = etree.parse(headerfile)\n",
     "\n",
     "    samples = int(xmldoc.findtext(\"./Channel/RasterInfo/Samples\"))\n",
@@ -153,6 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "outdir = pathlib.Path(\"ref-data\")\n",
+    "outdir.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
     "with open(raw_file, \"rb\") as fd:\n",
     "    for target in targets:\n",
     "        ph, sh, _ = records[target.packet_count]\n",
@@ -173,11 +177,15 @@
     "        bindata = isp_data[PHSIZE + SHSIZE :]\n",
     "        data = decode_ud(bindata, nq, baqmod, tstmod)\n",
     "\n",
-    "        filename = f\"{target.packet_count:06d}-{target.label}.dat\"\n",
+    "        filename = outdir.joinpath(\n",
+    "            f\"{target.packet_count:06d}-{target.label}.dat\"\n",
+    "        )\n",
     "        with open(filename, \"wb\") as raw_fd:\n",
     "            raw_fd.write(isp_data)\n",
     "\n",
-    "        filename = f\"{target.packet_count:06d}-{target.label}.npz\"\n",
+    "        filename = outdir.joinpath(\n",
+    "            f\"{target.packet_count:06d}-{target.label}.npz\"\n",
+    "        )\n",
     "        if target.label == \"echo\":\n",
     "            packet_offset = 408\n",
     "            _, refdata = read_ref_data(\n",
@@ -202,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"subcom-data.pkl\"\n",
+    "filename = outdir.joinpath(\"subcom-data.pkl\")\n",
     "with open(filename, \"wb\") as fd:\n",
     "    pickle.dump(subcomm_data_records, fd)"
    ]
@@ -210,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "p311",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.3"
   },
   "orig_nbformat": 4
  },
