Update pre-commit and black configuration

--- a/notebooks/generate-ref-data.ipynb
+++ b/notebooks/generate-ref-data.ipynb
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_ref_data(headerfile, datafile, row, dtype=np.dtype(\"complex64\")):\n",
+    "def read_ref_data(headerfile, datafile, row, dtype=\"complex64\"):\n",
     "    dtype = np.dtype(dtype)\n",
     "    xmldoc = etree.parse(headerfile)\n",
     "\n",
